# FGO-database

./: README.md  __init__.py  alembic.ini  main.py  migration.py  pyproject.toml  requirements.txt  setup.py
alembic/: env.py
alembic/versions/: 00b9fe07270b_add_func_type.py  0f311385b308_add_skill_name_to_ce.py  1892c658600b_update_tables.py  1f2f290d678e_chaneg_auxiliary_skill_id_type.py  27c4a01cacc0_add_card_type.py  2df60c35a6c7_add_servant_cards.py  3129436507ab_add_craftessenceskill_level.py  333b68a7ec26_add_strength_status_back.py  4fb2aba74830_add_self_trait_to_buff.py  513ea0e8c45e_add_individuality_check_to_buff.py  515996f8438e_increase_trait_length.py  543713c66d3d_changes_to_servants.py  574169d7d7cb_add_skill_name_as_pkey.py  6e0a1cba437f_add_quest_traits_to_functions.py  727760d9429a_add_skill_name_as_pkey1.py  7a22552e0c15_add_buff_fields.py  93619617d2ed_add_camp_and_traits_to_servants.py  9df5f40cc394_add_np_card_type.py  9eb4b207d283_add_ce.py  a8e3b68a0126_add_function_target_type_to_ce.py  abfa4d9d2b4e_add_craftessenceskill.py  ac3421b430e9_remove_fields_from_np.py  b033d5c37482_add_craftessenceskill_buff_id_default.py  cc821ef8c5c0_add_rebuild.py  e227a1d377d6_change_class_mode_type.py  ea947802760a_add_func_release_order_for_ce.py  f51fcaab5df2_add_craftessenceskill_cn_name.py  (+1 more)
data/: basics.py  buff_actions.json  ce_names.json.json  class_adv.json  face_card.json  svt_names.json.json
models/: __init__.py
models/migration/: ce.py  (+3 more)
scripts/: atlas.py  calculator.py  chaldea_center.py  connection.py  data_process.py  etl.py  main.py  utils.py
(+5 files in other folders)
